@startuml

title __TETRISBLOCK's Class Diagram__\n

  package com.pcchin.uiplayground {
    package com.pcchin.uiplayground.tetris {
      package com.pcchin.uiplayground.tetris.tetrisblock {
        abstract class TetrisBlock {
            - lastDrawNanoTime : long
            - block : Bitmap
            - context : Context
            - color : int
            ~ type : String
            - currentBlockCoords : ArrayList<ArrayList<Integer>>
            ~ TetrisBlock()
            {abstract} ~ setStartingCoords()
            {abstract} ~ rotate()
            - update()
            - bindGrid()
            - unbindGrid()
            ~ draw()
            + moveDown()
            ~ moveLeft()
            ~ moveRight()
            ~ getColor()
        }
      }
    }
  }
  

  package com.pcchin.uiplayground {
    package com.pcchin.uiplayground.tetris {
      package com.pcchin.uiplayground.tetris.tetrisblock {
        class TetrisI {
            + TetrisI()
            ~ setStartingCoords()
            ~ rotate()
        }
      }
    }
  }
  

  package com.pcchin.uiplayground {
    package com.pcchin.uiplayground.tetris {
      package com.pcchin.uiplayground.tetris.tetrisblock {
        class TetrisJ {
            + TetrisJ()
            ~ setStartingCoords()
            ~ rotate()
        }
      }
    }
  }
  

  package com.pcchin.uiplayground {
    package com.pcchin.uiplayground.tetris {
      package com.pcchin.uiplayground.tetris.tetrisblock {
        class TetrisL {
            + TetrisL()
            ~ setStartingCoords()
            ~ rotate()
        }
      }
    }
  }
  

  package com.pcchin.uiplayground {
    package com.pcchin.uiplayground.tetris {
      package com.pcchin.uiplayground.tetris.tetrisblock {
        class TetrisO {
            + TetrisO()
            ~ setStartingCoords()
            ~ rotate()
        }
      }
    }
  }
  

  package com.pcchin.uiplayground {
    package com.pcchin.uiplayground.tetris {
      package com.pcchin.uiplayground.tetris.tetrisblock {
        class TetrisS {
            + TetrisS()
            ~ setStartingCoords()
            ~ rotate()
        }
      }
    }
  }
  

  package com.pcchin.uiplayground {
    package com.pcchin.uiplayground.tetris {
      package com.pcchin.uiplayground.tetris.tetrisblock {
        class TetrisT {
            + TetrisT()
            ~ setStartingCoords()
            ~ rotate()
        }
      }
    }
  }
  

  package com.pcchin.uiplayground {
    package com.pcchin.uiplayground.tetris {
      package com.pcchin.uiplayground.tetris.tetrisblock {
        class TetrisZ {
            + TetrisZ()
            ~ setStartingCoords()
            ~ rotate()
        }
      }
    }
  }
  

  TetrisBlock -up-|> GameObject
  TetrisBlock o-- TetrisSurfaceView : tetrisSurfaceView
  TetrisI -up-|> TetrisBlock
  TetrisJ -up-|> TetrisBlock
  TetrisL -up-|> TetrisBlock
  TetrisO -up-|> TetrisBlock
  TetrisS -up-|> TetrisBlock
  TetrisT -up-|> TetrisBlock
  TetrisZ -up-|> TetrisBlock


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
